make working protoype

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Output</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -52,19 +52,20 @@
         <label for="offs">holidays in a year</label>
         <input type="number" id="offs" min="0" max="300" required><br><br>
 
-        <button>SUBMIT</button>
-    </form><br>
+        <button id="submit">SUBMIT</button>
+    </form><br><br>
 
-    <div id="hourlyPay">3</div>
-    <div id="wkDays">4</div>
-    <div id="offDays">3</div>
-    <div id="hrsTotal">3</div>
-    <div id="freeHrs">3</div>
+    <div id="hourlyPay"></div><br>
+    <div id="monthlyPay"></div><br>
+    <div id="wkDays"></div><br>
+    <div id="offDays"></div><br>
+    <div id="hrsTotal"></div><br>
+    <div id="freeHrs"></div> <br> <br>
 
     <form action="https://x.com/whyansh"><label for="twt">follow my twitter(X) account </label><button id="twt">HERE
             ✅</button>
     </form>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
